syntax = "proto3";

package loadbalancer;

import "google/protobuf/empty.proto";


// Client request
message ClientRequest {
  string request_type = 1;  // Typen af anmodning (GET, POST etc.)
  string request_data = 2;  // Data relateret til anmodningen
}

// Serverens svar på en klientanmodning
message ServerResponse {
  string message = 1;       // Svarbesked fra serveren
  int32 status_code = 2;    // HTTP-lignende statuskode (200, 404, 500)
}

// LoadBalancer til WebAPI anmodning
message ApiRequest {
  string request_id = 1;    // Unik ID for at tracke anmodninger
  ClientRequest client_request = 2;  // Klientens anmodning, der sendes til WebAPI
}

// WebAPI's svar til LoadBalancer
message ApiResponse {
  ServerResponse response = 1;  // Svar tilbage fra WebAPI
}

// Service definitioner

// LoadBalancer service, der modtager klientanmodninger
service LoadBalancerService {
  // LoadBalancer dirigerer en klientanmodning til WebAPI
  rpc SendRequestToApi (ApiRequest) returns (ApiResponse);
}

// WebAPI service, der interagerer med databasen
service WebAPIService {
  // Hent data fra databasen baseret på anmodningen
  rpc GetDataFromDb (ClientRequest) returns (ServerResponse);

  // Indsæt data i databasen
  rpc InsertDataToDb (ClientRequest) returns (ServerResponse);
}
